# YarnSpinner-Zed

./: .gitignore  Cargo.toml  README.md  extension.toml
.github/workflows/: codeberg-mirror.yml
languages/yarn-spinner/: highlights.scm
runtime/: README.md
runtime/compiler-service/: YarnSpinner.CompilerService.deps.json
runtime/language-server/: server.js
src/: lib.rs
tree-sitter/: .editorconfig  grammar.js  package.json  tree-sitter.json
tree-sitter/src/: grammar.json  node-types.json  parser.c
tree-sitter/test/corpus/: character_dialogue.txt  commands.txt  markup.txt
